<resources>
    <string name="app_name">Tollywood</string>
    <string name="title">Tollywood</string>
    <string name="instructions">instructions:</string>
    <string name="instruction1">-> There are 10 questions.</string>
    <string name="instruction2">-> There can be multiple answers for each question.</string>
    <string name="instruction3">-> Each correct answer is awarded by maximum of 10 points.</string>
    <string name="instruction4">-> The answer is correct only when all the correct options are checked.</string>
    <string name="names">participant name:</string>
    <string name="name">Name</string>
    <string name="question1">1. Which of these actors are present in the movie \"Bahubali\"?</string>
    <string name="a1">a) Prakash Raj</string>
    <string name="b1">b) Sudeep</string>
    <string name="c1">c) Adavi Shesh</string>
    <string name="d1">d) Sathya Raj</string>
    <string name="question2">2. What are the character names of heroines in the movie \"Mr.Perfect\"?</string>
    <string name="a2">a) Priya</string>
    <string name="b2">b) Nandana</string>
    <string name="c2">c) Maggi</string>
    <string name="d2">d) Meghana</string>
    <string name="question3">3. What are the names of Allu Arjun\'s children?</string>
    <string name="a3">a) Arha</string>
    <string name="b3">b) Abhay</string>
    <string name="c3">c) Akira Nandan</string>
    <string name="d3">d) Ayaan</string>
    <string name="question4">4. \"Khaidi No.150\" is the remake of the tamil movie?</string>
    <string name="question5">5. Who is the wife of hero Nani?</string>
    <string name="a5">a) Anjana Yelavarthy</string>
    <string name="b5">b) Virupa Kantamaneni</string>
    <string name="c5">c) Lakshmi Pranathi</string>
    <string name="d5">d) Upasana Kamineni</string>
    <string name="question6">6. In which of the following movies did Jr.NTR act?</string>
    <string name="a6">a) Student No.1</string>
    <string name="b6">b) Chinthakayala Ravi</string>
    <string name="c6">c) Rabhasa</string>
    <string name="d6">d) Patas</string>
    <string name="question7">7. Who are the heroines in the movie \"Premam\" acted by Naga Chaitanya?</string>
    <string name="a7">a) Shruti Hasan</string>
    <string name="b7">b) Sai Pallavi</string>
    <string name="c7">c) Anupama Parameshwaran</string>
    <string name="d7">d) Madonna Sabastian</string>
    <string name="question8">8. Identify the Actress.</string>
    <string name="question9">9. Which of the following movies are directed by \"Shekhar kammula\"?</string>
    <string name="a9">a) Leader</string>
    <string name="b9">b) Anaamika</string>
    <string name="c9">c) Happy Days</string>
    <string name="d9">d) Dollar dreams</string>
    <string name="question10">10. Identify the movie poster.</string>
    <string name="a10">a) Race Gurram</string>
    <string name="b10">b) Duvvadha Jagannadham</string>
    <string name="c10">c) S/O Sathyamurthy</string>
    <string name="d10">d) Sarainodu</string>
    <string name="submit">submit</string>
</resources>
